--- a/network_search.html
+++ b/network_search.html
@@ -109,11 +109,13 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar2.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                <img src="images/avatar2.png" class="w3-circle" style="height:116px;width:116px" alt="Avatar">
                             </p>
                         </td>
-                        <td>
+                        <td class="w3-padding">
                             <h4 class="w3-center">Profile #1</h4>
+                        </td>
+                        <td>
                             <p>
                                 <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
                             <p>
@@ -121,17 +123,28 @@
                             <p>
                                 <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
                         </td>
+                        <td>
+                            <p>
+                                <i class="fa fa-envelope-open"></i> Email: email@gmail.com</p>
+                            <p>
+                                <i class="fa fa-phone"></i> Phone: +123456789</p>
+                            <p>
+                                <i class="fa fa-link"></i> Website: website.com</p>
+                            </p>
+                        </td>
                     </table>
                 </div>
                 <div class="w3-container w3-card w3-white w3-margin">
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                <img src="images/avatar3.png" class="w3-circle" style="height:116px;width:116px" alt="Avatar">
                             </p>
                         </td>
-                        <td>
+                        <td class="w3-padding">
                             <h4 class="w3-center">Profile #2</h4>
+                        </td>
+                        <td>
                             <p>
                                 <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
                             <p>
@@ -139,23 +152,43 @@
                             <p>
                                 <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
                         </td>
+                        <td>
+                            <p>
+                                <i class="fa fa-envelope-open"></i> Email: email@gmail.com</p>
+                            <p>
+                                <i class="fa fa-phone"></i> Phone: +123456789</p>
+                            <p>
+                                <i class="fa fa-link"></i> Website: website.com</p>
+                            </p>
+                        </td>
                     </table>
                 </div>
                 <div class="w3-container w3-card w3-white w3-margin">
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar5.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                <img src="images/avatar5.png" class="w3-circle" style="height:116px;width:116px" alt="Avatar">
                             </p>
                         </td>
-                        <td>
+                        <td class="w3-padding">
                             <h4 class="w3-center">Profile #3</h4>
+                        </td>
+                        <td>
                             <p>
                                 <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
                             <p>
                                 <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                             <p>
                                 <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                        </td>
+                        <td>
+                            <p>
+                                <i class="fa fa-envelope-open"></i> Email: email@gmail.com</p>
+                            <p>
+                                <i class="fa fa-phone"></i> Phone: +123456789</p>
+                            <p>
+                                <i class="fa fa-link"></i> Website: website.com</p>
+                            </p>
                         </td>
                     </table>
                 </div>
@@ -163,17 +196,28 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar6.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                <img src="images/avatar6.png" class="w3-circle" style="height:116px;width:116px" alt="Avatar">
                             </p>
                         </td>
-                        <td>
+                        <td class="w3-padding">
                             <h4 class="w3-center">Profile #4</h4>
+                        </td>
+                        <td>
                             <p>
                                 <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
                             <p>
                                 <i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                             <p>
                                 <i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                        </td>
+                        <td>
+                            <p>
+                                <i class="fa fa-envelope-open"></i> Email: email@gmail.com</p>
+                            <p>
+                                <i class="fa fa-phone"></i> Phone: +123456789</p>
+                            <p>
+                                <i class="fa fa-link"></i> Website: website.com</p>
+                            </p>
                         </td>
                     </table>
                 </div>
