--- a/login.html
+++ b/login.html
@@ -39,12 +39,14 @@
                         <table style="width:100%">
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="email" type="email" placeholder="Email" class="w3-border w3-padding" style="width:100%;" required/>
+                                    <input id="email" type="email" placeholder="Email" onkeyup="check_form(this.id);" class="w3-border w3-padding" style="width:100%;"
+                                        required/>
                                 </div>
                             </tr>
                             <tr>
                                 <div class="w3-row w3-padding" style="width:100%;">
-                                    <input id="password" type="password" placeholder="Password" class="w3-border w3-padding" style="width:100%;" required/>
+                                    <input id="password" type="password" placeholder="Password" onkeyup="check_form(this.id);" class="w3-border w3-padding" style="width:100%;"
+                                        required/>
                                 </div>
                             </tr>
                             <tr>
@@ -99,13 +101,47 @@
             }
         }
 
-        function check_login() {
-            if (document.getElementById('email').value == "" ||
-                document.getElementById('password').value == "") {
-                document.getElementById('email').validateInput();
-                document.getElementById('error_message').value = "Missing required fields.";
+        function check_form(id) {
+            document.getElementById(id).setCustomValidity("");
+            if (document.getElementById(id).checkValidity() == false) {
+                document.getElementById(id).setCustomValidity("Invalid field.");
+                if (id == "email") {
+                    document.getElementById('error_message').value = "Invalid email.";
+                }
+                else {
+                    document.getElementById('error_message').value = "Missing required fields.";
+                }
             }
             else {
+                document.getElementById(id).setCustomValidity("");
+                document.getElementById('error_message').value = "";
+            }
+        }
+
+        function check_login() {
+            var error = false;
+            if (document.getElementById('email').value == "") {
+                document.getElementById('email').setCustomValidity("Invalid field.");
+                document.getElementById('error_message').value = "Missing required fields.";
+                error = true;
+            }
+            else if (document.getElementById('email').checkValidity() == false) {
+                document.getElementById('email').setCustomValidity("Invalid field.");
+                document.getElementById('error_message').value = "Invalid email.";
+                error = true;
+            }
+            else {
+                document.getElementById('email').setCustomValidity("");
+            }
+            if (document.getElementById('password').value == "") {
+                document.getElementById('password').setCustomValidity("Invalid field.");
+                document.getElementById('error_message').value = "Missing required fields.";
+                error = true;
+            }
+            else {
+                document.getElementById('password').setCustomValidity("");
+            }
+            if (error == false) {
                 document.getElementById('error_message').value = "";
                 location.href = "home.html";
             }
