--- a/settings.html
+++ b/settings.html
@@ -91,10 +91,12 @@
                         <h4>Email</h4>
                     </div>
                     <div class="w3-row w3-padding" style="width:100%;">
-                        <input id="e_email" type="email" placeholder="New Email" class="w3-border w3-padding" style="width:100%;" required/>
+                        <input id="e_email" type="email" placeholder="New Email" onkeyup="check_e_form(this.id);" class="w3-border w3-padding" style="width:100%;"
+                            required/>
                     </div>
                     <div class="w3-row w3-padding" style="width:100%;">
-                        <input id="e_password" type="password" placeholder="Confirm Password" class="w3-border w3-padding" style="width:100%;" required/>
+                        <input id="e_password" type="password" placeholder="Confirm Password" onkeyup="check_e_form(this.id);" class="w3-border w3-padding"
+                            style="width:100%;" required/>
                     </div>
                     <table>
                         <td>
@@ -115,20 +117,21 @@
                         <h4>Password</h4>
                     </div>
                     <div class="w3-row w3-padding" style="width:100%;">
-                        <input id="p_password" type="password" placeholder="New Password" class="w3-border w3-padding" style="width:100%;" required/>
-                    </div>
-                    <div class="w3-row w3-padding" style="width:100%;">
-                        <input id="p_new_password" type="password" placeholder="Confirm New Password" onkeyup="comparePasswords();" class="w3-border w3-padding"
+                        <input id="p_password" type="password" placeholder="New Password" onkeyup="check_p_form(this.id);" class="w3-border w3-padding"
                             style="width:100%;" required/>
                     </div>
                     <div class="w3-row w3-padding" style="width:100%;">
-                        <input id="p_c_password" type="password" placeholder="Confirm Password" onkeyup="comparePasswords();" class="w3-border w3-padding"
-                            style="width:100%;" required/>
+                        <input id="p_new_password" type="password" placeholder="Confirm New Password" onkeyup="check_p_form(this.id);comparePasswords();"
+                            class="w3-border w3-padding" style="width:100%;" required/>
+                    </div>
+                    <div class="w3-row w3-padding" style="width:100%;">
+                        <input id="p_c_password" type="password" placeholder="Confirm Current Password" onkeyup="check_p_form(this.id);comparePasswords();"
+                            class="w3-border w3-padding" style="width:100%;" required/>
                     </div>
                     <table>
                         <td>
                             <div class="w3-row w3-padding" style="width:100%;">
-                                <button id="p_change" type="button" onclick="check_p_change();" class="w3-button w3-theme-d2 w3-margin-bottom">
+                                <button type="button" onclick="check_p_change();" class="w3-button w3-theme-d2 w3-margin-bottom">
                                     <i class="fa fa-edit"></i> Change</button>
                             </div>
                         </td>
@@ -165,34 +168,90 @@
             }
         }
 
-        function comparePasswords() {
-            if (document.getElementById('p_new_password').value ==
-                document.getElementById('p_c_password').value) {
+        function check_p_form(id) {
+            document.getElementById(id).setCustomValidity("");
+            if (document.getElementById(id).checkValidity() == false) {
+                document.getElementById(id).setCustomValidity("Invalid field.");
+                document.getElementById('p_error_message').value = "Missing required fields.";
+            }
+            else {
+                document.getElementById(id).setCustomValidity("");
                 document.getElementById('p_error_message').value = "";
-                document.getElementById("p_change").disabled = false;
+            }
+        }
+
+        function check_e_form(id) {
+            document.getElementById(id).setCustomValidity("");
+            if (document.getElementById(id).checkValidity() == false) {
+                document.getElementById(id).setCustomValidity("Invalid field.");
+                if (id == "e_email") {
+                    document.getElementById('e_error_message').value = "Invalid email.";
+                }
+                else {
+                    document.getElementById('e_error_message').value = "Missing required fields.";
+                }
+            }
+            else {
+                document.getElementById(id).setCustomValidity("");
+                document.getElementById('e_error_message').value = "";
+            }
+        }
+
+        function comparePasswords() {
+            if ((document.getElementById('p_new_password').value != "" &&
+                document.getElementById('p_c_password').value != "") &&
+                (document.getElementById('p_new_password').value ==
+                    document.getElementById('p_c_password').value)) {
+                document.getElementById('p_new_password').setCustomValidity("");
+                document.getElementById('p_c_password').setCustomValidity("");
+                return true;
             } else {
+                document.getElementById('p_new_password').setCustomValidity("Invalid field.");
+                document.getElementById('p_c_password').setCustomValidity("Invalid field.");
                 document.getElementById('p_error_message').value = "Passwords not matching.";
-                document.getElementById("p_change").disabled = true;
+                return false;
             }
         }
 
         function check_e_change() {
-            if (document.getElementById('e_email').value == "" ||
-                document.getElementById('e_password').value == "") {
+            var error = false;
+            if (document.getElementById('e_email').value == "") {
+                document.getElementById('e_email').setCustomValidity("Invalid field.");
                 document.getElementById('e_error_message').value = "Missing required fields.";
+                error = true;
             }
             else {
+                document.getElementById('e_mail').setCustomValidity("");
+            }
+            if (document.getElementById('e_password').value == "") {
+                document.getElementById('e_password').setCustomValidity("Invalid field.");
+                document.getElementById('e_error_message').value = "Missing required fields.";
+                error = true;
+            }
+            else {
+                document.getElementById().setCustomValidity("");
+            }
+            if (error == false) {
                 document.getElementById('e_error_message').value = "";
             }
         }
 
         function check_p_change() {
-            if (document.getElementById('p_password').value == "" ||
-                document.getElementById('p_new_password').value == "" ||
-                document.getElementById('p_c_password').value == "") {
-                document.getElementById('p_error_message').value = "Missing required fields.";
+            var error = false, id_arr = ["p_password", "p_new_password", "p_c_password"];
+            for (var i = 0; i < id_arr.length; i++) {
+                if (document.getElementById(id_arr[i]).value == "") {
+                    document.getElementById(id_arr[i]).setCustomValidity("Invalid field.");
+                    document.getElementById('p_error_message').value = "Missing required fields.";
+                    error = true;
+                }
+                else {
+                    document.getElementById(id_arr[i]).setCustomValidity("");
+                }
             }
-            else {
+            if (comparePasswords() == false) {
+                error = true;
+            }
+            if (error == false) {
                 document.getElementById('p_error_message').value = "";
             }
         }
