--- a/network_search.html
+++ b/network_search.html
@@ -235,9 +235,16 @@
     <br>
     <!-- Footer -->
     <footer class="w3-container w3-theme-d5">
-        <p>Powered by
-            <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-        </p>
+        <table class="w3-opacity-min" style="width:100%">
+            <td>
+                <h5>LinkedIn Clone</h5>
+            </td>
+            <td style="float:right">
+                <p>Made by Vasileios Papavasileiou & Vasileios Sakkas - Powered by
+                    <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+                </p>
+            </td>
+        </table>
     </footer>
 
     <script>
