--- a/login.html
+++ b/login.html
@@ -82,12 +82,18 @@
     <!-- End Page Container -->
     </div>
     <br>
-
     <!-- Footer -->
-    <footer class="w3-container w3-theme-d5 w3-bottom">
-        <p>Powered by
-            <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-        </p>
+    <footer class="w3-container w3-theme-d5">
+        <table class="w3-opacity-min" style="width:100%">
+            <td>
+                <h5>LinkedIn Clone</h5>
+            </td>
+            <td style="float:right">
+                <p>Made by Vasileios Papavasileiou & Vasileios Sakkas - Powered by
+                    <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+                </p>
+            </td>
+        </table>
     </footer>
 
     <script>
