Added comment sections.

--- a/home.html
+++ b/home.html
@@ -119,10 +119,29 @@
                             <img src="images/nature.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
                         </div>
                     </div>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
+                    <button type="button" class="w3-button w3-theme-d2">
                         <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                    <hr class="w3-clear">
+                    <table style="width:100%">
+                        <tr>
+                            <td>
+                                <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right w3-margin-bottom" style="width:60px">
+                            </td>
+                            <td style="width: 100%">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                    ut labore et dolore magna aliqua.</p>
+                            </td>
+                        </tr>
+                    </table>
+                    <table style="width:100%">
+                        <td style="width: 100%">
+                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom" style="width:100%;" />
+                        </td>
+                        <td style="width: 100%">
+                            <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
+                                <i class="fa fa-comment"></i> Comment</button>
+                        </td>
+                    </table>
                 </div>
 
                 <div class="w3-container w3-card w3-white w3-margin">
@@ -137,8 +156,20 @@
                     </p>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
                         <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                    <hr class="w3-clear">
+                    <table style="width:100%">
+                        <tr>
+                        </tr>
+                    </table>
+                    <table style="width:100%">
+                        <td style="width: 100%">
+                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom" style="width:100%;" />
+                        </td>
+                        <td style="width: 100%">
+                            <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
+                                <i class="fa fa-comment"></i> Comment</button>
+                        </td>
+                    </table>
                 </div>
 
                 <div class="w3-container w3-card w3-white w3-margin">
@@ -154,8 +185,28 @@
                     <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
                         <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                    <hr class="w3-clear">
+                    <table style="width:100%">
+                        <tr>
+                            <td>
+                                <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right w3-margin-bottom" style="width:60px">
+                            </td>
+                            <td style="width: 100%">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            </td>
+                        </tr>
+                    </table>
+                    <table style="width:100%">
+                        <td style="width: 100%">
+                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom" style="width:100%;" />
+                        </td>
+                        <td style="width: 100%">
+                            <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
+                                <i class="fa fa-comment"></i> Comment</button>
+                        </td>
+                    </table>
                 </div>
                 <!-- End Middle Column -->
             </div>
