--- a/user_profile.html
+++ b/user_profile.html
@@ -121,19 +121,19 @@
                 <div class="w3-container w3-card w3-white w3-margin">
                     <h4>Work Experience</h4>
                     <ul style="padding-left: 16px">
-                        <li>Company #1
+                        <li><b>Company #1</b> <i style="float:right;">Jan 2017 - Now</i>
                             <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
-                        <li>Company #2
+                        <li><b>Company #2</b> <i style="float:right">Oct 2015 - Nov 2016</i>
                             <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
-                        <li>Company #3
+                        <li><b>Company #3</b> <i style="float:right">Apr 2013 - Sep 2015</i>
                             <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua.
                             <br>
@@ -143,13 +143,13 @@
                     <hr class="w3-clear">
                     <h4>Education</h4>
                     <ul style="padding-left: 16px">
-                        <li>University
+                        <li><b>University</b> <i style="float:right">Sep 2008 - Jun 2012</i>
                             <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua.
                             <br>
                             <br>
                         </li>
-                        <li>School
+                        <li><b>School</b>
                             <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua.
                             <br>
